Cinnamon - Overview - fix excessive spacing in window-caption

--- a/common/cinnamon/sass/_common.scss
+++ b/common/cinnamon/sass/_common.scss
@@ -467,7 +467,7 @@ StScrollBar {
   background-color: $osd_bg_color;
   border: 1px solid $osd_bg_color;
   color: $osd_fg_color;
-  spacing: 25px;
+  spacing: 4px;
   border-radius: 2px;
   font-size: 9pt;
   padding: 5px 8px;
@@ -477,7 +477,6 @@ StScrollBar {
     background-color: $selected_bg_color;
     color: $selected_fg_color;
     border: 1px solid $selected_bg_color;
-    spacing: 25px;
   }
 }
 
